<resources>
    <string name="app_name">Faluda</string>
    <string name="faluda">Faluda</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">login</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="you_are_logged_in">You are logged in</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile Number</string>
    <string name="address">Adress</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="register">Register</string>
    <string name="details">Enter your registered name and password below</string>
    <string name="mobile_number">Mobile number</string>
    <string name="email_address">Email Address</string>
    <string name="next">Next</string>
    <string name="hey_yo">Hey Yo!</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="faqs">FAQs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history">History</string>
    <string name="logout">Logout</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="navigation_drawer">Navigation Drawer</string>

</resources>
