<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/dashboard"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>

        <item
            android:id="@+id/favorites"
            android:title="@string/favorites"
            android:icon="@drawable/ic_favorites"/>

        <item
            android:id="@+id/history"
            android:title="@string/history"
            android:icon="@drawable/ic_history"/>



        <item
            android:id="@+id/profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_profile"/>

        <item
            android:id="@+id/faqs"
            android:title="@string/faqs"
            android:icon="@drawable/ic_faqs"/>

        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_faqs"/>

    </group>

</menu>