<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"/>


    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/et_sides"
        android:padding="15dp"
        android:hint="@string/name"
        android:maxLength="20"
        android:maxLines="1"
        android:drawableLeft="@drawable/ic_name"
        android:drawablePadding="8dp"
        android:inputType="text"
        android:layout_below="@id/toolbar"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/etName"
        android:background="@drawable/et_sides"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLength="20"
        android:maxLines="1"
        android:padding="15dp" />

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/etEmail"
        android:background="@drawable/et_sides"
        android:drawableLeft="@drawable/ic_mobile"
        android:drawablePadding="8dp"
        android:hint="@string/mobile"
        android:inputType="number"
        android:maxLength="20"
        android:maxLines="1"
        android:padding="15dp" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/etMobileNumber"
        android:background="@drawable/et_sides"
        android:drawableLeft="@drawable/ic_adress"
        android:drawablePadding="8dp"
        android:hint="@string/address"
        android:inputType="text"
        android:maxLength="20"
        android:maxLines="1"
        android:padding="15dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/etAddress"
        android:background="@drawable/et_sides"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="8dp"
        android:hint="@string/password"
        android:inputType="number"
        android:maxLength="20"
        android:maxLines="1"
        android:padding="15dp" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/etPassword"
        android:background="@drawable/et_sides"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="8dp"
        android:hint="@string/confirmPassword"
        android:inputType="numberPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:padding="15dp" />


    <Button
        android:id="@+id/btnRegister"
        android:layout_margin="10dp"
        android:background="@drawable/btn_sides"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/etConfirmPassword" />

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>