<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="75dp"
        android:padding="20dp"
        android:src="@drawable/app_logo" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo2"
        android:layout_gravity="center"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="-28dp"
        android:layout_marginRight="115dp"
        android:padding="20dp"
        android:text="@string/faluda"
        android:textColor="@color/logo"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
    android:id="@+id/etMobileNumber"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:layout_below="@+id/text2"
    android:background="@drawable/et_sides"
        android:padding="15dp"
        android:hint="@string/enter_mobile_number"
        android:maxLines="1"
        android:maxLength="10"
        android:drawableLeft="@drawable/ic_mobile"
        android:drawablePadding="8dp"
        android:inputType="number"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_below="@+id/etMobileNumber"
        android:background="@drawable/et_sides"
        android:padding="15dp"
        android:hint="@string/enter_password"
        android:maxLength="6"
        android:maxLines="1"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="8dp"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/txtForgetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_marginLeft="220dp"
        android:layout_marginRight="2dp"
        android:text="@string/forget_password"
        android:textColor="@color/writing"
        android:textSize="20sp"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_below="@+id/txtForgetPassword"
        android:background="@drawable/btn_sides"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:padding="15dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:textAllCaps="false"
            android:padding="8dp"
            android:textAlignment="center"
            android:text="@string/sign_up"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/writing"
            android:layout_marginBottom="10dp"/>

    </RelativeLayout>

</LinearLayout>

