<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/app_logo"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp" />

    <TextView
        android:id="@+id/regNP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_marginTop="30dp"
        android:text="@string/details"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/et_sides"
        android:padding="15dp"
        android:hint="@string/mobile_number"
        android:maxLength="20"
        android:maxLines="1"
        android:drawablePadding="8dp"
        android:inputType="text"
        android:layout_below="@id/regNP" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/et_sides"
        android:padding="15dp"
        android:hint="@string/email_address"
        android:maxLength="20"
        android:maxLines="1"
        android:drawablePadding="8dp"
        android:inputType="text"
        android:layout_below="@id/regNP" />

    <Button
        android:id="@+id/btnNext"
        android:layout_margin="10dp"
        android:background="@drawable/btn_sides"
        android:text="@string/next"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/etEmail" />

</LinearLayout>